# VantageNotes

./: .env-example  .gitignore  LICENSE  README.md  REQUIREMENTS.txt  bundler.ts  collab_state.py  collab_ws.py  collab_ws.ts  db.py  deno.json  helpers.py  log.ts  logger.py  main.py  main.ts  metadata.py  metadatastore.py  metadatatypes.py  pyproject.toml  search.ts  sockets.py  start.py  websocket.py.old  ystore.db
cm/: MarkdownHighlighterFactory.ts  autocompleteFactory.ts  autocompleteProviders.ts  blockquoteplugin.ts  brackethider.ts  calloutplugin.ts  clickhandler.ts  codeblockplugin.ts  delimiterFactory.ts  delimiterFactory.ts.old  delimiters.ts  dsl.ts  frontmatterPlugin.ts  linkHighlighter.ts  luaEditor.ts  luaExecutionPlugin.ts  markdownHeadingPlugin.ts  markdownHrDecorator.ts  markdownListDecorator.ts  queryPlugin.ts  renderedblock.ts  tagHighlighter.ts  transclusionPlugin.ts  transclusionPlugin.ts.old  warningBlock.ts
cm_plugins/: autocomplete.ts  autosave.ts  checklists.ts  codeblocks.ts  collaboration.ts  hashtag.ts  headers.ts  highlight.ts  htmlOutputPlugin.ts  hyperlinks.ts  infobar.ts  inlinecode.ts  jsworker.ts  lists.ts  metadata.ts  mobiletabhandler.ts  quotes.ts  slashcommands.ts  transclusions.ts  wikilinks.ts
common/: app.ts  backlinks.ts  browser-db.ts  cm_utils.ts  db-interface.ts  documentManager.ts  editor.ts  editor.ts.old  events.ts  helpers.ts  logger.ts  lua.ts  luaVM.ts  main.ts  metadata.ts  metadataindexer.ts  metadatapanel.ts  navigation.ts  pane.ts  pluginhelpers.ts  search.ts  server-db.ts  sidebar.ts  sidepanel.ts  tabs.ts  (+4 more)
(+63 files in other folders)
